# libvoip

./: CMakeLists.txt
src/: CMakeLists.txt  audiostream.cpp  audiostream.hpp  client.cpp  client.hpp  recorder.cpp  recorder.hpp
test/: CMakeLists.txt  main.cpp
